@@ -88,7 +88,6 @@ exportMethods(tanh)
 exportMethods(tcrossprod)
 exportMethods(trunc)
 import(methods)
-importFrom(pbdMPI,allreduce)
 importFrom(pbdMPI,bcast)
 importFrom(pbdMPI,comm.all)
 importFrom(pbdMPI,comm.max)
@@ -100,6 +99,7 @@ importFrom(pbdMPI,irecv)
 importFrom(pbdMPI,isend)
 importFrom(pbdMPI,recv)
 importFrom(pbdMPI,send)
+importFrom(pbdMPI,spmd.allreduce.double)
 importFrom(stats,optim)
 importFrom(stats,prcomp)
 importFrom(stats,runif)
