@@ -37,7 +37,7 @@ colsum.shaq = function(x, na.rm = FALSE, dims = 1L)
   check.is.flag(na.rm)
   
   cs = base::colSums(DATA(x), na.rm=na.rm)
-  allreduce(cs)
+  MPI_Allreduce(cs)
 }
 
 colmean.shaq = function(x, na.rm = FALSE, dims = 1L)
@@ -45,7 +45,7 @@ colmean.shaq = function(x, na.rm = FALSE, dims = 1L)
   check.is.flag(na.rm)
   
   cs = base::colSums(DATA(x), na.rm=na.rm)
-  allreduce(cs) / nrow(x)
+  MPI_Allreduce(cs) / nrow(x)
 }
 
 
