@@ -11,8 +11,8 @@
 #' a play on the fact that 'Shaquille' 'ONeal' ('Shaq') is very tall, and he
 #' starred in the film 'Kazaam'.
 #' 
-#' @importFrom pbdMPI isend irecv send recv allreduce bcast comm.size comm.rank
-#'    comm.stop comm.all comm.max get.jid
+#' @importFrom pbdMPI isend irecv send recv spmd.allreduce.double bcast
+#'    comm.size comm.rank comm.stop comm.all comm.max get.jid
 #' @import methods
 #' @importFrom stats prcomp optim runif
 #' 
